--- a/index.html
+++ b/index.html
@@ -250,6 +250,38 @@
           </main>
         </div>
       </div>
+
+      <script id="template-author-right-link" type="text/x-handlebars-template">
+        <!--<li><a href="#{{ id }}"><span>author{{ title }}</span></a></li>-->
+        {{#each authors}}
+        <li>
+          <a href="#author-{{ author }}"><span>{{ author }}({{ count }})</span></a>
+        </li>
+        {{/each}}
+      </script>
+
+      <script id="template-tag-cloud-link" type="text/x-handlebars-template">
+        <!--<li><a href="#{{ id }}"><span>cloud{{ title }}</span></a></li>-->
+        {{#each tags}}
+        <li>
+          <a href="#tag-{{ tag }}" class="{{ className }}"><span>{{ tag }}</span></a>
+        </li>
+        {{/each}}
+      </script>
+
+      <script id="template-author-link" type="text/x-handlebars-template">
+        <a href="#author-{{ id }}"><span>by {{ title }}</span></a>
+      </script>
+
+      <script id="template-tag-link" type="text/x-handlebars-template">
+        <li><a href="#tag-{{ id }}"><span>{{ title }}</span></a></li>
+      </script>
+
+      <script id="template-article-link" type="text/x-handlebars-template">
+        <li><a href="#{{ id }}"><span>{{ title }}</span></a></li>
+      </script>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.1.0/handlebars.min.js"></script>
     <script src="js/script.js"></script>
 </body>
 </html>
